--- a/core/static/estilos/estilo-diario.css
+++ b/core/static/estilos/estilo-diario.css
@@ -77,6 +77,7 @@
     align-items: center;
     font-family: 'Inter', sans-serif;
     font-size: 12px;
+    gap: 4px;
 }
 .registros p{
     color: #A8A8A8;
@@ -88,6 +89,14 @@
 .button-registrar{
     display: flex;
     align-items: center;
+    gap: 4px;
+}
+.button-registrar button{
+    border: none;
+    background: #ffff;
+    color: #FF8D61;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
 }
 .mes{
     margin-left: 42px;
