--- a/core/static/estilos/estilo.css
+++ b/core/static/estilos/estilo.css
@@ -273,6 +273,12 @@ form {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
 }
+.topo-dieta a {
+    color: #FFFFFF;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+}
 .topo-dieta button{
     border-radius: 8px;
     border: none;
@@ -311,6 +317,7 @@ form {
     color:#0C9A61;
     text-align: left;
     padding-left: 300px;
+    text-decoration: none;
 }
 
 #button-diario{
