--- a/core/templates/core/meus-formularios.html
+++ b/core/templates/core/meus-formularios.html
@@ -7,14 +7,14 @@
     <header>
       <nav class="breadcrumbs">
         <div class="breadcrumb">
-          <a href="#">
+          <a href="/">
             <i class="ph ph-house-line"></i>
             <span>Home /</span>
           </a>
         </div>
 
         <div class="breadcrumb">
-          <a href="#">
+          <a href="/meus-formularios">
             <i class="ph ph-notepad"></i>
             <span>Meus formulários /</span>
           </a>
@@ -33,7 +33,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Formulários</h1>
 
-        <button class="botao-padrao">Novo formulário</button>
+        <button class="botao-padrao"><a href="/novo-formulario">Novo formulário</a></button>
       </div>
 
       {% block collapse %}
