--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-main.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/collapse-formularios.css' %}" />
 
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/novo-formulario.css' %}" />
+
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
