--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -74,8 +74,8 @@
             </div>
         </div>
         <div class="buttons-progresso">
-            <button id="botao-cancelar" type="Cancelar">Cancelar</button>
-            <button id="botao-salvar" type="Salvar">Salvar</button>
+            <button id="botao-cancelar" type="button">Cancelar</button>
+            <button id="botao-salvar" type="button">Salvar</button>
         </div>
         </div>
     </dialog>
