:art: ajustar largura de novo formulario

--- a/core/templates/core/novo-formulario.html
+++ b/core/templates/core/novo-formulario.html
@@ -41,7 +41,7 @@
         <h1>Novo formulário</h1>
       </div>
 
-      <div class="formulario">
+      <div class="novo-formulario">
         <div id="container-tipo-formulario">
           <div class="tipo-formulario">
             <input type="radio" name="pre-consulta" id="pre-consulta" />
