--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -5,7 +5,7 @@
     <dialog class="main-progresso" id="myModal">
         <div class="topo-progresso-h1">
             <h1>Registrar progresso</h1>
-            <i class="ph ph-x"></i>
+            <button id="fecharModal"><i class="ph ph-x"></i></button>
         </div>
         <div class="topo-progresso-h3">
             <h3>Faça seu registro de hoje no diário alimentar</h3>
