--- a/core/static/estilos/estilo-registrar-progresso.css
+++ b/core/static/estilos/estilo-registrar-progresso.css
@@ -1,5 +1,6 @@
 .main-progresso{
     max-width: 715px;
+    border: none;
 }
 .topo-progresso-h1,
 .topo-progresso-h3{
@@ -17,6 +18,10 @@
     font-family: 'Inter', sans-serif;
     font-size: 20px;
 }
+.topo-progresso-h1 button{
+    border: none;
+    background-color: #FFFFFF;
+}
 .topo-progresso-h3{
     margin-top: 0px;
 }
@@ -30,6 +35,7 @@
     margin-bottom: 50px;
     display: flex;
     gap:322px;
+    margin-right: 73px;
 }
 .button-registrar-progresso h2{
     color: #000;
@@ -129,4 +135,14 @@
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     margin-right: 24px;
+}
+.ph-coffee{
+    color: #FF8D61;
+}
+.main-progresso dialog{
+    margin: 0 auto; 
+    position: fixed;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
 }
