--- a/core/templates/core/cadastrarAlimento.html
+++ b/core/templates/core/cadastrarAlimento.html
@@ -6,17 +6,7 @@
     <main class="cadastro-alimento">
         <div class="conteudo-topo-alimento">
             <h1>Cadastrar novo alimento</h1>
-            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
-                <g clip-path="url(#clip0_128_2395)">
-                <path d="M21.875 6.125L6.125 21.875" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M21.875 21.875L6.125 6.125" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </g>
-                <defs>
-                <clipPath id="clip0_128_2395">
-                    <rect width="28" height="28" fill="white"/>
-                </clipPath>
-                </defs>
-            </svg>
+            <i class="ph ph-x"></i>
         </div>
         <div class="labels-iniciais">
             <label>Nome</label>
@@ -29,14 +19,18 @@
             <br>
         </div>
         <div class="row">
-            <label>Calorias (em kcal)</label>
-            <br>
-            <input type="text" placeholder="Ex: 21" />
-            <br>
-            <label>Porção (em g)</label>
-            <br>
-            <input type="text" placeholder="Ex: 50kg" />
-            <br>
+            <div class="porcao-alimento">
+                <label>Porção (em g)</label>
+                <br>
+                <input type="text" placeholder="Ex: 21" />
+                <br>
+            </div>
+            <div class="inputs-alimento">
+                <label>Calorias (em kcal)</label>
+                <br>
+                <input type="text" placeholder="Ex: 50kg" />
+                <br>
+            </div>
         </div>
         <div class="checkbox-substituto"> 
             <input type="checkbox"/> 
