:sparkles: tela de alimentos

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,6 +23,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/novo-formulario.css' %}" />
 
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
+
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
@@ -46,7 +48,7 @@
         </li>
 
         <li class="opcao-do-menu">
-          <a href="#">
+          <a href="/alimentos">
             <i class="ph ph-apple-logo"></i>
             <span>Alimentos</span>
           </a>
