:art: renomear imagem e importar estilo-login.css

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="{% static 'core/estilos/estilo.css' %}" />
 
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo-login.css' %}" />
+
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-collapse.css' %}" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-main.css' %}" />
