--- a/core/static/core/estilos/estilo-login.css
+++ b/core/static/core/estilos/estilo-login.css
@@ -5,7 +5,7 @@
     overflow: hidden;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     width: 100vw;
@@ -18,26 +18,31 @@ h1 {
 /* login */
 #login h1,
 #label-email,
-#label-senha{
-    color:#0C9A61;
+#label-senha {
+    color: #0C9A61;
 }
-#login h3{
-    color:#898C93;
+
+#login h3 {
+    color: #898C93;
 }
-#login a{
+
+#login a {
     color: #FF8D61;
 }
-#login button{
+
+#login button {
     color: #FFFFFF;
     background-color: #0C9A61;
 }
-.login-container{
+
+.login-container {
     border: 2px solid #E2E2E2;
     text-align: center;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     font-family: "Roboto", sans-serif;
+    max-height: 680px;
 }
 
 h2 {
@@ -69,11 +74,11 @@ label {
     margin-bottom: 4px;
 }
 
-#login input::placeholder {
+#login #login input::placeholder {
     color: #E2E2E2;
 }
 
-#login input {  
+#login input {
     width: 100%;
     height: 49px;
     border: 1px solid #F4F3F3;
@@ -97,7 +102,7 @@ label {
 }
 
 /* login-main */
-#login-main{
+#login-main {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,7 +119,7 @@ label {
     justify-content: space-between;
 }
 
-#logo-container{
+#logo-container {
     /* margin-right:50%;
     margin-bottom: 70px; */
     width: 207px;
@@ -127,7 +132,7 @@ label {
 }
 
 
-#container-mensagem-de-bem-vindo{
+#container-mensagem-de-bem-vindo {
     width: 100%;
 }
 
@@ -141,6 +146,7 @@ form {
     align-items: center;
     justify-content: space-around;
 }
+
 .form-item {
     margin-top: 38px;
     margin-bottom: 10px;
@@ -149,6 +155,7 @@ form {
     align-items: start;
     width: 100%;
 }
+
 #botao-entrar {
     width: 100%;
     padding: 13px;
@@ -164,128 +171,148 @@ form {
 #botao-entrar:hover {
     cursor: pointer;
 }
+
 /* visualizar dieta */
-#paciente{
-    color:#FF8D61;
+#paciente {
+    color: #FF8D61;
 }
-#container{
+
+#container {
     display: flex;
     justify-content: space-between;
 }
+
 #topo-visualizar {
-    margin-bottom: 300px; 
+    margin-bottom: 300px;
 }
-#informacoes h1{
+
+#informacoes h1 {
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     gap: 19px;
     font-size: 22px;
     padding-bottom: 20px;
     margin-left: 0px;
     padding-left: 33.3px;
     padding-top: 10px;
-    font-family: 'Inter',sans-serif;
+    font-family: 'Inter', sans-serif;
 }
+
 #informacoes h4,
 #calorias h4,
-#consumiu h4{
+#consumiu h4 {
     color: #A8A8A8;
 }
-#informacoes h4{
+
+#informacoes h4 {
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     margin-bottom: 0px;
     margin-left: 0px;
     padding-left: 24.6px;
     padding-bottom: 26px;
     padding-top: 26px;
-    font-family: 'Inter',sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 12px;
 }
-#informacoes-dieta{
+
+#informacoes-dieta {
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
 }
+
 #objetivo,
 #diagnostico,
-#status{
+#status {
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     gap: 10px;
-    font-family: 'Inter',sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 10px;
 }
-#objetivo{
+
+#objetivo {
     padding-right: 93px;
     padding-bottom: 27px;
     padding-top: 40px;
 }
-#objetivo p, 
+
+#objetivo p,
 #diagnostico p,
-#status p{
+#status p {
     padding-bottom: 16px;
 }
+
 #diagnostico,
-#status{
+#status {
     padding-bottom: 27px;
     padding-top: 40px;
 }
 
 #objetivo strong,
 #diagnostico strong,
-#status strong{
+#status strong {
     font-size: 12px;
 }
 
-#diagnostico{
+#diagnostico {
     padding-right: 125px;
 }
-#status{
+
+#status {
     padding-right: 66px;
 }
 
-.labels{
+.labels {
     color: #A8A8A8;
     margin-left: 24.60px;
 }
-#container-2 strong{
+
+#container-2 strong {
     margin-left: 24.60px;
 }
-#container-2{
+
+#container-2 {
     display: flex;
 }
-.quadros{
-    margin-bottom: 20px; 
+
+.quadros {
+    margin-bottom: 20px;
     width: 100%;
 
 }
-#container-3{
+
+#container-3 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-right: 57px;
 }
-.topo-dieta h1{
+
+.topo-dieta h1 {
     margin-left: 33px;
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 18px;
     font-family: 'Inter', sans-serif;
 }
-.topo-dieta button{
+
+.topo-dieta button {
     border-radius: 8px;
     border: none;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
 }
-#container-3 button{
+
+#container-3 button {
     width: 132px;
     height: 36px;
     background-color: #0C9A61;
-    color:#FFFFFF;
+    color: #FFFFFF;
 }
-#consumiu{
+
+#consumiu {
     border: 1px solid #FF8D61;
     border-radius: 10px;
     background: rgba(255, 141, 97, 0.14);
@@ -294,120 +321,140 @@ form {
     padding-left: 20px;
     padding-right: 127px;
 }
-#consumiu h4{
+
+#consumiu h4 {
     font-family: 'Inter', sans-serif;
     font-size: 13px;
 
 }
-#consumiu strong{
-    font-family: 'Inter',sans-serif;
+
+#consumiu strong {
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
+
 #consumiu h4,
-#consumiu p{
+#consumiu p {
     margin-left: 20px;
 }
-#button-diario a{
-    color:#0C9A61;
+
+#button-diario a {
+    color: #0C9A61;
     text-align: left;
     padding-left: 300px;
 }
 
-#button-diario{
+#button-diario {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 17px;
 }
+
 #parte-1,
-#parte-2{
+#parte-2 {
     display: flex;
     justify-content: space-between;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     color: #000;
 }
+
 #parte-1 h3,
-#parte-2 h3{
+#parte-2 h3 {
     font-size: 14px;
     color: #000;
 }
+
 .alimentos-1,
-.alimentos-2{
+.alimentos-2 {
     margin-bottom: 30px;
 }
-#cafe-da-manha{
+
+#cafe-da-manha {
     display: flex;
     align-items: center;
     gap: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
-    color:#0C9A61;
+    color: #0C9A61;
     padding-bottom: 25px;
 }
-#cafe-da-manha h3{
+
+#cafe-da-manha h3 {
     font-size: 14px;
     color: #0C9A61;
     margin-bottom: 0;
 }
+
 #cafe-da-manha,
 #parte-1,
-#parte-2{
+#parte-2 {
     margin-left: 58px;
 }
-#calorias{
+
+#calorias {
     font-family: 'Inter', sans-serif;
     font-size: 18px;
 }
-#conteudo-calorias{
+
+#conteudo-calorias {
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 40px;
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
 }
-#conteudo-calorias h1{
+
+#conteudo-calorias h1 {
     padding-bottom: 12px;
 }
-#conteudo-calorias h4{
+
+#conteudo-calorias h4 {
     padding-bottom: 21px;
 }
-#calorias h4{
+
+#calorias h4 {
     font-family: 'Inter', sans-serif;
     font-size: 10px;
 }
 
-#cafe{
+#cafe {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
     background: #FFFFFF;
     padding-top: 18px;
 }
+
 #alimento-1 h3,
 #substituto-1 h3,
 #alimento-2 h3,
-#substituto-2 h3{
+#substituto-2 h3 {
     margin-bottom: 10px;
 }
+
 #alimento-1 p,
 #substituto-1 p,
 #alimento-2 p,
-#substituto-2 p{
+#substituto-2 p {
     margin-top: 0px;
 }
+
 #substituto-1,
 .alimentos-1,
 #substituto-2,
-.alimentos-2{
+.alimentos-2 {
     width: 50%;
 }
-#informacoes-dieta{
+
+#informacoes-dieta {
     width: 761px;
 }
-#conteudo-dieta{
+
+#conteudo-dieta {
     display: flex;
-    gap:23px;
+    gap: 23px;
     margin: auto;
     justify-content: center;
 }
