--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,34 +1,33 @@
 {% extends 'core/base.html' %} {% load static %} {% block main %}
-  <main id="loginMain">
-    <section class="imagem-login">
-      <img src="{% static 'imagens/logo-diet-hub.svg' %}" alt="DietHub" />
-      <h1>Bem vindo(a)!</h1>
-      <img src="{% static 'imagens/eating-healthy-food-bro.svg' %}" alt="Mulher
-      comendo" />
-    </section>
-    <section id="login">
-      <h1>Login</h1>
-      <h3>Faça login para continuar</h3>
-      <br />
-      <form action="../index.html">
-        <div class="formItem">
-          <label for="" id="label-email">Email:</label>
-          <input type="email" placeholder="user@gmail.com" />
-        </div>
-        <div class="formItem">
-          <label for="" id="label-senha">Senha:</label>
-          <input type="password" />
-          <br />
-          <a href="esqueciSenha.html">Esqueci a senha</a>
-        </div>
-        <br />
-        <div id="formBtns">
-          <button type="Entrar">Entrar</button>
-        </div>
-        <p>
-          Ainda não é cadastrado? <a href="cadastro.html">Cadastre-se</a>
-        </p>
-      </form>
-    </section>
+  <main id="login-main">
+    <div id="imagem-login">
+      <div id="logo-container">
+        <img src="{% static 'imagens/logo-diet-hub.svg' %}" alt="DietHub" />
+      </div>
+
+      <div class="container-mensagem-de-bem-vindo">
+        <h1>Bem vindo(a)!</h1>
+        <img src="{% static 'imagens/eating-healthy-food-bro.svg' %}" alt="Mulher
+        comendo" />
+      </div>
+    </div>
+    <div id="login" class="login-container">
+      <div class="conteudo-login-container">
+        <h1>Login</h1>
+        <h3>Faça login para continuar</h3>
+        <form action="../index.html">
+          <div class="form-item">
+            <label for="" id="label-email">Email:</label>
+            <input type="email" placeholder="user@gmail.com" />
+          </div>
+          <div class="form-item">
+            <label for="" id="label-senha">Senha:</label>
+            <input type="password" />
+          </div>
+          <a id="input-esqueci-senha" href="esqueciSenha.html">Esqueci a senha</a>
+          <button id="botao-entrar" type="Entrar">Entrar</button>
+        </form>
+      </div>
+    </div>
   </main>
 {% endblock %}
