--- a/core/static/core/estilos/estilo-login.css
+++ b/core/static/core/estilos/estilo-login.css
@@ -143,7 +143,7 @@ form {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
     justify-content: space-around;
 }
 
