--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/novo-formulario.css' %}" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
