--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -24,8 +24,8 @@
             <label for="" id="label-senha">Senha:</label>
             <input type="password" />
           </div>
-          <a id="input-esqueci-senha" href="esqueciSenha.html">Esqueci a senha</a>
-          <button id="botao-entrar" type="Entrar">Entrar</button>
+          <a id="input-esqueci-senha" href="#">Esqueci a senha</a>
+          <button id="botao-entrar" type="Entrar"><a href="/home">Entrar</a></button>
         </form>
       </div>
     </div>
