--- a/core/static/core/estilos/estilo.css
+++ b/core/static/core/estilos/estilo.css
@@ -18,8 +18,7 @@ body {
     height: 100vh;
     border-right: 1px solid #F4F3F3;
     padding: 12px;
-    width: 13.44rem;
-    /* 215px */
+    width: 235px;
     display: flex;
     flex-direction: column;
     align-items: center;
