--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
 
+    <script src="{% static 'js/modal.js' %}"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="{% static 'estilos/estilo-diario.css' %}" />
   </head>
