:hammer: adicionar header no sistema do usuario

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,7 +41,9 @@
     {% endblock %}
 
     {% block main %}
+      {% block header %}
 
+      {% endblock %}
     {% endblock %}
   </body>
 </html>
