--- a/core/templates/core/registrar-progresso.html
+++ b/core/templates/core/registrar-progresso.html
@@ -1,4 +1,4 @@
-{% extends 'core/visualizarDieta.html' %}
+{% extends 'core/visualizar-dieta.html' %}
 {% load static %}
 
 {% block modal_registrar_progresso %}
