--- a/core/templates/core/visualizar-dieta.html
+++ b/core/templates/core/visualizar-dieta.html
@@ -4,18 +4,19 @@
 {% block main %}
   <main>
     <div id="visualizar-dieta">
-      <section id="container">
-        <section id="imagem-logo" class="topo-visualizar">
-          <img src="{% static 'imagens/Group 74.svg' %}" alt="DietHub" id="logo" />
-        </section>
-        <section id="perfil" class="topo-visualizar">
-          <p>Karla Nunes</p>
-          <p id="paciente">Paciente</p>
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
-            <circle cx="20" cy="20" r="20" fill="#FF8D61" />
-          </svg>
-        </section>
-      </section>
+      {% block header %}
+        <header>
+          <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+
+          <div class="informacoes-do-usuario">
+            <div class="texto-informacoes-do-usuario">
+              <span class="nome-do-usuario">Taysa</span>
+              <span class="tipo-de-usuario">Paciente</span>
+            </div>
+            <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" />
+          </div>
+        </header>
+      {% endblock %}
       <div id="conteudo-dieta">
         <section id="informacoes-dieta">
           <section id="informacoes">
