--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,6 +27,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-cadastrar-dieta.css' %}" />
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
