--- a/core/templates/core/cadastrar-dieta.html
+++ b/core/templates/core/cadastrar-dieta.html
@@ -9,30 +9,51 @@
             <i class="ph ph-x"></i>
         </div>
         <div class="refeicoes-dieta">
-            <p>Refeição I</p>
-            <hr>
-            <p>Refeição II</p>
-            <hr>
-            <p>Refeição III</p>
-            <hr>
+            <div class="refeicao-1-dieta">
+                <p>Refeição I</p>
+                <hr>
+            </div>
+            <div class="refeicao-2-dieta">
+                <p>Refeição II</p>
+                <hr>
+            </div>
+            <div class="refeicao-2-dieta">
+                <p>Refeição III</p>
+                <hr>
+            </div>
         </div>
-        <div class="opcao-1-dieta">
-            <label>Opção 1:</label>
-            <p>Salada de frutas</p>
-            <label>Substituto: </label>
-            <p>Vitamina</p>
-        </div>
-        <div class="opcao-2-dieta">
-            <label>Opção 2:</label>
-            <p>Salada de frutas</p>
-            <label>Substituto: </label>
-            <p>Vitamina</p>
-        </div>
-        <div class="opcao-3-dieta">
-            <label>Opção 3:</label>
-            <p>Salada de frutas</p>
-            <label>Substituto: </label>
-            <p>Vitamina</p>
+        <div class="container-opcoes-dietas">
+            <div class="opcaos-dieta">
+                <div class="opcao-1-dieta">
+                    <label>Opção 1:</label>
+                    <p>Salada de frutas</p>
+                </div>
+                <div class="substituto-1-dieta">
+                    <label>Substituto: </label>
+                    <p>Vitamina</p>
+                </div>
+            </div>
+            <div class="opcaos-dieta">
+                <div class="opcao-2-dieta">
+                    <label>Opção 2:</label>
+                    <p>Salada de frutas</p>
+                </div>
+                <div class="substituto-2-dieta">
+                    <label>Substituto: </label>
+                    <p>Vitamina</p>
+                </div>
+            </div>
+            <div class="opcaos-dieta">
+                <div class="opcao-3-dieta">
+                    <label>Opção 3:</label>
+                    <p>Salada de frutas</p>
+                </div>
+                <div class="substituto-3-dieta">
+                    <label>Substituto: </label>
+                    <p>Vitamina</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="adicionar-alimento">
             <i class="ph ph-plus"></i>
